--- a/GP05-CallCenter/Site.Master
+++ b/GP05-CallCenter/Site.Master
@@ -48,8 +48,8 @@
                 <div class="collapse navbar-collapse d-sm-inline-flex justify-content-center">
                     <ul class="navbar-nav">
                         <li class="nav-item"><a class="nav-link" runat="server" href="~/">Inicio</a></li>
-                        <li class="nav-item"><a class="nav-link" runat="server" href="~/About">Acerca de</a></li>
-                        <li class="nav-item"><a class="nav-link" runat="server" href="~/Contact">Contacto</a></li>
+                        <%-- <li class="nav-item"><a class="nav-link" runat="server" href="~/About">Acerca de</a></li>
+                        <li class="nav-item"><a class="nav-link" runat="server" href="~/Contact">Contacto</a></li> --%>
                         <li class="nav-item"><a class="nav-link" runat="server" href="~/Cuenta">Cuenta</a></li>
                         <% var usuario = Session["usuario"] as Datos.Usuario;
                             if (usuario != null)
