--- a/GP05-CallCenter/Site.Master
+++ b/GP05-CallCenter/Site.Master
@@ -7,7 +7,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title><%: Page.Title %> - Call Center UTN</title>
+    <title><%: Page.Title %> Call Center UTN</title>
 
     <asp:PlaceHolder runat="server">
         <%: Scripts.Render("~/bundles/modernizr") %>
@@ -38,9 +38,14 @@
                 <%--Site Scripts--%>
             </Scripts>
         </asp:ScriptManager>
-
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark bg-dark">
             <div class="container d-flex justify-content-center">
+                <div class="container-fluid">
+                    <a class="navbar-brand" href="Default">
+                        <img src="assets/UTN-blancoSobreNegro.svg" alt="" width="38" height="32" class="d-inline-block align-text-top">
+                        Callcenter UTN
+                    </a>
+                </div>
                 <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" title="Alternar navegación" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
