--- a/GP05-CallCenter/Site.Master
+++ b/GP05-CallCenter/Site.Master
@@ -52,7 +52,7 @@
                 </button>
                 <div class="collapse navbar-collapse d-sm-inline-flex justify-content-center">
                     <ul class="navbar-nav">
-                        <li class="nav-item"><a class="nav-link" runat="server" href="~/">Inicio</a></li>
+<%--                        <li class="nav-item"><a class="nav-link" runat="server" href="~/">Inicio</a></li>--%>
                         <%-- <li class="nav-item"><a class="nav-link" runat="server" href="~/About">Acerca de</a></li>
                         <li class="nav-item"><a class="nav-link" runat="server" href="~/Contact">Contacto</a></li> --%>
                         <li class="nav-item"><a class="nav-link" runat="server" href="~/Cuenta">Cuenta</a></li>
@@ -61,7 +61,7 @@
                             {
                         %>
                         <li class="nav-item">
-                            <asp:LinkButton ID="btnLogout" runat="server" CssClass="nav-link" OnClick="btnLogout_Click">Cerrar sesión</asp:LinkButton>
+                            <asp:LinkButton ID="btnLogout" runat="server" CssClass="nav-link" OnClick="btnLogout_Click">Salir</asp:LinkButton>
                         </li>
                         <% } %>
                     </ul>
